main/k8s/atlantis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlantis
  labels:
    app: atlantis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlantis
  template:
    metadata:
      labels:
        app: atlantis
    spec:
      containers:
      - name: atlantis
        image: runatlantis/atlantis:v0.17.0
        ports:
        - containerPort: 4141
---
apiVersion: v1
kind: Service
metadata:
  name: atlantis-service
spec:
  selector:
    app: atlantis
  ports:
    - protocol: TCP
      port: 4141
      targetPort: 4141
      nodePort: 30003
  type: NodePort
