main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    gwin.yandex.cloud/subnets: "e2lb6celpfc5q1vt20r7,e9bk0cn9tp7rcu1o7q71,fl8bf3b1ckq9peebvd73"  
    # `groupName` is required.
    gwin.yandex.cloud/groupName: "my-ingress-group" # group multiple ingresses to single Balancer
    gwin.yandex.cloud/externalIPv4Address: "auto" # external IPv4 address
    # Healthcheck
    gwin.yandex.cloud/rules.backends.hc.timeout: "5s"
    gwin.yandex.cloud/rules.backends.hc.interval: "15s"
    gwin.yandex.cloud/rules.backends.hc.healthyThreshold: "1"
    gwin.yandex.cloud/rules.backends.hc.unhealthyThreshold: "3"
    gwin.yandex.cloud/rules.backends.hc.port: "30001" # стандартный порт nginx
    gwin.yandex.cloud/rules.backends.hc.http.path: "/" # корневой путь
spec:
  ingressClassName: gwin-default # use Gwin ingress class
  rules:
    - http:
        paths:
          - path: "/myapp"
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: default
  annotations:
    # `groupName` is required.
    gwin.yandex.cloud/groupName: "my-ingress-group" # group multiple ingresses to single Balancer
    gwin.yandex.cloud/externalIPv4Address: "auto" # external IPv4 address
    # Healthcheck
    gwin.yandex.cloud/rules.backends.hc.timeout: "5s"
    gwin.yandex.cloud/rules.backends.hc.interval: "15s"
    gwin.yandex.cloud/rules.backends.hc.healthyThreshold: "1"
    gwin.yandex.cloud/rules.backends.hc.unhealthyThreshold: "3"
    # gwin.yandex.cloud/rules.prefixRewrite: "/" # rewrite path to /
    gwin.yandex.cloud/rules.backends.hc.port: "30003" # стандартный порт nginx
    gwin.yandex.cloud/rules.backends.hc.http.path: "/healthz" # корневой путь
spec:
  ingressClassName: gwin-default # use Gwin ingress class
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: atlantis-service
                port:
                  number: 4141
